--- a/module10/prometheus/httpserver-service.yaml
+++ b/module10/prometheus/httpserver-service.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    prometheus.io/port: "8080"
+    prometheus.io/scrape: "true"
   name: httpserver-service
 spec:
   selector:
